--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 fastapi==0.115.0
 uvicorn==0.30.6
 requests==2.32.3
-sqlalchemy==2.0.36
-alembic==1.14.0
 pydantic==2.9.2
-psycopg[binary]
+psycopg[binary,pool]
 python-dotenv
 phonenumbers
