--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,15 @@
     "@emotion/react": "^11.14.0",
     "@prisma/client": "^7.2.0",
     "dotenv": "^17.2.3",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
+    "leaflet": "^1.9.4",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
