--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,8 @@
     "@emotion/react": "^11.14.0",
     "@prisma/client": "^7.2.0",
     "dotenv": "^17.2.3",
-    "jspdf": "^4.0.0",
-    "jspdf-autotable": "^5.0.7",
     "leaflet": "^1.9.4",
+    "xlsx": "^0.18.5",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
